# dickbag.org

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml  renovate.json  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre_commit.yaml
dickbag/: __init__.py
docs/: README.md
tests/: README.md
