[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dickbag"
version = "0.1.0"
description = "stuff for dickbag.org"
repository = "https://github.com/rpdelaney/dickbag.org"
homepage = "https://dickbag.org"
authors = []
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
deal = "^4.23.3"

[tool.poetry.dev-dependencies]
black = "*"
deal-solver = "^0.1.1"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-simplify = "^0.21.0"
hypothesis = "^6.49.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8-docstrings = "^1.6.0"
flake8-comprehensions = "^3.10.0"

[tool.poetry.dev-dependencies.isort]
version = "^5.10.1"
extras = [ "pyproject",]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--doctest-modules"
]
filterwarnings = ["error"]
xfail_strict = true

[tool.mypy]
plugins = ["deal.mypy"]

# any
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

# untyped
allow_untyped_globals = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

# optionals
no_implicit_optional = true
strict_optional = true

# imports
follow_imports = "normal"
ignore_missing_imports = false

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

strict_equality = true

# error formating
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true
